--- a/views/templates/guias/historial.latte
+++ b/views/templates/guias/historial.latte
@@ -6,9 +6,9 @@
 {/block}
 
 {block body}
-<div id="region">
+<div id="region" style="background-color:white;border-radius:10px;padding:30px">
 	<div class="rotulo">
-		<h1>HISTORIAL DE RUTAS ASIGNADAS Y CUBIERTAS</h1><br><br>
+		<h1>HISTORIAL DE RUTAS ASIGNADAS Y CUBIERTAS</h1>
 	</div>
 
 	<div class="row control">
@@ -60,8 +60,6 @@
 					<td>{$tour['horas']}</td>
 				</tr>
 				{/foreach}
-
-
 			</tbody>
 		</table>
 	</div>
